[gd_scene load_steps=4 format=3 uid="uid://dfoqrti7bmk1u"]

[ext_resource type="Script" path="res://Assets/Scripts/UI/Menus/PauseMenu.gd" id="1_blvm1"]
[ext_resource type="Theme" path="res://Assets/User-Interface/Themes/ButtonTheme.tres" id="3_8vvce"]
[ext_resource type="FontFile" uid="uid://elp7o4t3i2jp" path="res://Assets/User-Interface/Fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="4_424h1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blvm1")

[node name="System" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="System"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="System"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="System/VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="System/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_8vvce")
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="RestartLevel" type="Button" parent="System/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_8vvce")
theme_override_font_sizes/font_size = 30
text = "Restart
Level"

[node name="LevelSelect" type="Button" parent="System/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_8vvce")
theme_override_font_sizes/font_size = 30
text = "Level 
Select"

[node name="MarginContainer2" type="MarginContainer" parent="System/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="System"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="System/VBoxContainer2"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Paused" type="RichTextLabel" parent="System/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("4_424h1")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][rainbow]Paused[/rainbow][/center]"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="System/VBoxContainer2"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Level" type="RichTextLabel" parent="System/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("4_424h1")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]1-0

Testing"
fit_content = true

[node name="MarginContainer3" type="MarginContainer" parent="System/VBoxContainer2"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="System"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 100
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="System/VBoxContainer3"]
layout_mode = 2

[node name="MainMenu" type="Button" parent="System/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_8vvce")
theme_override_font_sizes/font_size = 30
text = "Main
Menu"

[node name="ExitGame" type="Button" parent="System/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_8vvce")
theme_override_font_sizes/font_size = 30
text = "Exit
Game"

[node name="MarginContainer3" type="MarginContainer" parent="System/VBoxContainer3"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="System"]
layout_mode = 2

[connection signal="pressed" from="System/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="System/VBoxContainer/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="System/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="System/VBoxContainer3/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="System/VBoxContainer3/ExitGame" to="." method="_on_exit_game_pressed"]
